--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node .build/index.js",
+    "start": "nodemon .build/index.js",
     "watch": "tsc -w",
     "server": "nodemon .build/index.js",
     "dev": "concurrently \"npm run watch\" \"npm run server\""
