--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon .build/index.js",
+    "start": "node .build/index.js",
     "watch": "tsc -w",
     "server": "nodemon .build/index.js",
     "dev": "concurrently \"npm run watch\" \"npm run server\""
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "concurrently": "^9.2.0",
@@ -26,10 +27,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@socket.io/admin-ui": "^0.5.1",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@socket.io/redis-streams-adapter": "^0.2.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
+    "socket.io": "^4.8.1"
   }
 }
