--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "prisma": "^6.19.0",
     "socket.io": "^4.8.1"
   }
